# app/routes/api/group/group-id/index.ts
@@ -5,9 +5,8 @@ import getGroupRouter from './get';
 import inviteUserToGroupRouter from './invite';
 import leaveGroupRouter from './leave';
 import {groupIdValidation} from '@app/validators';
-import groupGroupIdUserIdRouter from './user-id';
 import groupGroupIdInvitesRouter from './invites';
-import getMemberOfGroupRouter from './members';
+import groupMemberRouter from './member';
 
 const groupGroupIdRouter = Router({mergeParams: true});
 
@@ -16,10 +15,9 @@ groupGroupIdRouter.put('/', updateGroupRouter);
 groupGroupIdRouter.delete('/', deleteGroupRouter);
 groupGroupIdRouter.get('/', getGroupRouter);
 groupGroupIdRouter.use('/invites', groupGroupIdInvitesRouter);
-groupGroupIdRouter.use('/members', getMemberOfGroupRouter);
+groupGroupIdRouter.use('/member', groupMemberRouter);
 groupGroupIdRouter.use('/invite', inviteUserToGroupRouter);
 groupGroupIdRouter.use('/leave', leaveGroupRouter);
-groupGroupIdRouter.use('/:userId', groupGroupIdUserIdRouter);
 
 export default groupGroupIdRouter;
 
@@ -27,6 +25,6 @@ export * from './delete';
 export * from './get';
 export * from './update';
 export * from './invite';
-export * from './user-id';
+export * from './member/user-id';
 export * from './invites';
-export * from './members';
+export * from './member';
